{{$NEXT}}

    - RC8
    - Fix bug when using defined, but empty (or space) as a test name in a subtest
    - Better notificatons for late Test::Builder load
    - Recommend Test2::Transition if you have outdated modules

1.302014_007 2016-04-24 13:09:03-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC7
    - Fix #642 - Persistent environments need to have ENDING flag cleared

1.302014_006 2016-04-24 02:31:13-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC6
    - Remove reduntant and problematic parts of 00-report.t
    - No changes to actual code, just a test that provides diags

1.302014_005 2016-04-24 01:55:55-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC5
    - Prevent the breakage reporter from being a test failure
    - No changes to actual code, just a test that provides diags

1.302014_004 2016-04-23 16:21:34-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC4
    - Update breakage info
    - Fix IPC files driver to use the most significant data in the shm (needs test)

1.302014_003 2016-04-23 03:20:36-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC3
    - Localize $@ and $! when loading Data::Dumper in explain()

1.302014_002 2016-04-22 14:54:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC2
    - Restore X-Breaks meta info
    - Keep dist.ini in the tarball

1.302014_001 2016-04-22 04:01:50-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC1
    - Merge Test2 into the Test-Simple dist
    - Remove experimental status
    - Update copyright dates
    - Better error messages when using Carp in Hashbase init()
    - Document 2 methods on Events
    - Fix Test2 #17 (typo fix in docs)
    - Report version mismatches between Test::Builder and Test2
    - Update transition docs
    - Breakage library and warnings

*****************************************************************************
*                                                                           *